syntax = "proto3";

package api;
option go_package = "/api";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

import "area.proto";
import "pagination.proto";
import "trigger.proto";
import "condition.proto";
import "action.proto";
import "telemetry.proto";

message Task {
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool enabled = 4;
  string condition = 5;
  repeated Trigger triggers = 6;
  repeated Condition conditions = 7;
  repeated Action actions = 8;
  optional Area area = 9;
  optional int64 area_id = 10;
  optional bool isLoaded = 11;
  repeated int64 triggerIds = 12;
  repeated int64 conditionIds = 13;
  repeated int64 actionIds = 14;
  optional bool completed = 15;
  repeated TelemetryItem telemetry = 16;

  google.protobuf.Timestamp created_at = 99;
  google.protobuf.Timestamp updated_at = 100;
}

message NewTaskRequest {
  string name = 2;
  string description = 3;
  bool enabled = 4;
  string condition = 5;
  repeated int64 triggerIds = 6;
  repeated int64 conditionIds = 7;
  repeated int64 actionIds = 8;
  optional int64 area_id = 9;
}

message UpdateTaskRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
  bool enabled = 4;
  string condition = 5;
  repeated int64 triggerIds = 6;
  repeated int64 conditionIds = 7;
  repeated int64 actionIds = 8;
  optional int64 area_id = 9;
}

message GetTaskRequest {
  int64 id = 1;
}

message GetTaskListResult {
  repeated Task items = 1;
  Meta meta = 2;
}

message DeleteTaskRequest {
  int64 id = 1;
}

message EnableTaskRequest {
  int64 id = 1;
}

message DisableTaskRequest {
  int64 id = 1;
}

service AutomationService {

  // add new task
  rpc AddTask (NewTaskRequest) returns (Task){
    option (google.api.http) = {
      post: "/v1/task"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // update task
  rpc UpdateTask (UpdateTaskRequest) returns (Task){
    option (google.api.http) = {
      put: "/v1/task/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // get task
  rpc GetTask (GetTaskRequest) returns (Task){
    option (google.api.http) = {
      get: "/v1/task/{id}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // get task list
  rpc GetTaskList (PaginationRequest) returns (GetTaskListResult){
    option (google.api.http) = {
      get: "/v1/tasks"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // delete task
  rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/v1/task/{id}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // enable task
  rpc EnableTask (EnableTaskRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1/task/{id}/enable"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // disable task
  rpc DisableTask (DisableTaskRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1/task/{id}/disable"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // import task
  rpc ImportTask (Task) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/v1/tasks/import"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

}
